syntax = "proto3";
import "message.proto";
package protocol;

enum Client2ServerKey
{
  CreatTopic       = 0;
  GetPublisherPartition       = 1;
  Publish     = 2;
  GetConsumerPartition       = 3;
  SubscribePartion = 4;
  SubscribeTopic = 5;
  RegisterConsumer = 6;
  UnRegisterConsumer = 7;
  ConsumeSuccess = 8;
};

// this is a comment
message Client2Server {
  Client2ServerKey key = 1;
  string Topic = 2;
  string Partition = 3;
  string GroupName = 4;
  int32 PartitionNum = 5;
  int32 MsgId = 6;
  Message msg = 7;
}

